--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 
 <body>
     <div class="container">
+
+        <section class="header">
+            <img class="logo" src="img/lambda-black.png" alt="Lambda">
+            <a href="#">Home</a>
+            <a href="about.html">About</a>
+            <a href="#">Products</a>
+            <a href="#">Blog</a>
+            <a href="#">Contact</a>
+        </section>
    
         <section class="top-content">
             <div class="text-container">
