--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             <a href="#">Blog</a>
             <a href="#">Contact</a>
         </section>
+
+        <img class="jumboImg" src="img/jumbo.jpg" alt="Jumbo Image">
    
         <section class="top-content">
             <div class="text-container">
