--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             <a href="#">About</a>
             <a href="#">Products</a>
             <a href="#">Blog</a>
-            <a href="#">Contact</a>
+            <a href="contact.html">Contact</a>
         </section>
 
         <img class="jumboImg" src="img/jumbo-about.png" alt="Jumbo About">
@@ -86,7 +86,7 @@
           <a href="#">About</a>
           <a href="#">Products</a>
           <a href="#">Blog</a>
-          <a href="#">Contact</a>
+          <a href="contact.html">Contact</a>
         </nav>
       </footer>
     </div><!-- container -->        
