--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="about.html">About</a>
             <a href="#">Products</a>
             <a href="#">Blog</a>
-            <a href="#">Contact</a>
+            <a href="contact.html">Contact</a>
         </section>
 
         <img class="jumboImg" src="img/jumbo.jpg" alt="Jumbo Image">
@@ -78,7 +78,7 @@
                 <a href="about.html">About</a>
                 <a href="#">Products</a>
                 <a href="#">Blog</a>
-                <a href="#">Contact</a>
+                <a href="contact.html">Contact</a>
             </nav>
         </footer>
     </div><!-- container -->        
