--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,40 @@
 
     <div class="container">
 
+            <section class="header">
+                    <img class="logo" src="img/lambda-black.png" alt="Lambda">
+                    <a href="index.html">Home</a>
+                    <a href="#">About</a>
+                    <a href="#">Products</a>
+                    <a href="#">Blog</a>
+                    <a href="contact.html">Contact</a>
+                </section>
+
+                <section class="form-container">
+
+                    <form>
+                        Name:<br>
+                        <input type="text" name="name"><br>
+                        Email:<br>
+                        <input type="text" name="email"><br>
+                        Services requested / Notes:<br>
+                        <input type="text" name="notes">
+                        <button>Submit</button>
+                    </form>                    
+
+                </section>
+
+
+                <footer>
+                        <nav>
+                            <a href="#">Home</a>
+                            <a href="about.html">About</a>
+                            <a href="#">Products</a>
+                            <a href="#">Blog</a>
+                            <a href="contact.html">Contact</a>
+                        </nav>
+                    </footer>
+
 
 
     </div>
